move index.html to demo folder

--- a/demo/index.html
+++ b/demo/index.html
@@ -32,7 +32,7 @@
   <h2 id="message">Swipe!</h2>
   <div class="block">Swipe here</div></div>
   <script type="module">
-    import onSwipe, {Directions} from '/src/index.js';
+    import onSwipe, {Directions} from '../src/index.js';
     const block = document.querySelector('.block')
 
     const print = message => document.getElementById('message').textContent = message;
